# infopoisk

./: CMakeLists.txt  README.md  high_quality_samples.txt  main.py  requirements.txt  zipf.py
include/: binary_index_format.hpp  binary_search_tree.hpp  boolean_index.hpp  boolean_search.hpp  document.hpp  hash_table.hpp  search_cli.hpp  tokenizer.hpp  zipf_analyzer.hpp
report/: README.md
report/report_infopoisk/src/: problem.tex  src.tex  thinks.tex  titlepage.tex
report/report_infopoisk/styles/: log-style.sty
src/: binary_index_format.cpp  boolean_index.cpp  boolean_search.cpp  main.cpp  mongo_connector.cpp  search_cli.cpp  stemmer.cpp  tokenizer.cpp  zipf_analyzer.cpp
